# gimbal_servoing

./: CMakeLists.txt  README.md
gimbal-sdk/: CMakeLists.txt  README.md
gimbal-sdk/include/gimbal/: crc32.cpp  gimbal.h  gimbal_cmd.cpp
gimbal-sdk/include/gimbal/include/: command.h  crc32.h  gimbal_cmd.h  gimbal_parser.h
gimbal-sdk/sample/: CameraControl.cpp  GetGimbalState.cpp  GimbalAngleControl.cpp  GimbalAngleRateControl.cpp
gimbal-sdk/src/: serial.cc
include/amov_gimbal_sdk_ros/: amov_gimbal_node.h
launch/: gimbal_G1.launch  gimbal_image_G1.launch
msg/: border_coordinates.msg
scripts/: yoloV5.py  yoloV5_listener.py
src/: amov_gimbal_image_node.cpp  amov_gimbal_node.cpp  gimbal_control_server.cpp
srv/: gimbal_control.srv
